# bt-dualboot

./: .gitignore  README-dev.md  README.md  bluetooth_device.py  bt-dualboot  manual_pytest.ini  pyproject.toml  requirements.txt  win_mount.py
bt_dualboot/: __init__.py  __main__.py  __meta__.py  bluetooth_device.py  win_mount.py
bt_dualboot/bt_linux/: bluetooth_device_factory.py
bt_dualboot/bt_sync_manager/: bt_sync_manager.py
bt_dualboot/bt_windows/: convert.py  devices.py
bt_dualboot/cli/: app.py
bt_dualboot/console/: app.py  tools.py
bt_dualboot/windows_registry/: windows_registry.py
bt_linux/: bluetooth_device_factory.py  devices.py
bt_sync_manager/: __init__.py  bt_sync_manager.py
bt_windows/: convert.py  devices.py
console/: app.py  tools.py
dev/: helpers.sh  lists-intersection  pre-release-all  start-tests  start-tests-all  start-tests-bug  start-tests-integration  start-tests-manual
dev/pre-release/: lint-all  lint-black  lint-flake8  update-version
docker/: add-user  devpi-bootstrap  devpi-stop  prebuild-dependencies  wait-http
tests/: helpers.py
tests/bt_linux/: bluetooth_device_factory_test.py  devices_test.py  shared_fixtures.py
tests/bt_sync_manager/: bt_sync_manager_test.py
tests/bt_windows/: convert_test.py  devices_test.py  shared_fixtures.py
tests/cli/: tools_test.py
tests/console/: tools_test.py
tests/windows_registry/: shared_fixtures.py  windows_registry_test.py
tests/windows_registry/data_samples/: export_sample_01.reg
tests_integration/: __init__.py  helpers.py  helpers.sh
tests_integration/cli/env_blank_linux/: start  test_cli.py
tests_integration/cli/env_no_windows/: start
tests_integration/cli/env_single_windows/: Dockerfile  Dockerfile.base  Dockerfile.build_pip  opts-Dockerfile.base  opts-Dockerfile.build_pip  start  test_cli.py
windows_registry/: __init__.py  windows_registry.py
(+90 files in other folders)
