[tool.poetry]
name = "bt-dualboot"
version = "1.0.1"
description = "Sync Bluetooth for dualboot Linux and Windows"
keywords = [ "bluetooth", "dualboot", "sync", "pairing", "keys" ]
authors = ["Konstantin Ivanov <KEIvanov@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/x2es/bt-dualboot.git"
repository = "https://github.com/x2es/bt-dualboot.git"
license = "MIT"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
    "Topic :: Multimedia",
    "Topic :: System",
    "Topic :: System :: Operating System",
    "Topic :: System :: Systems Administration",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-watch = "^4.2.0"
pytest-snapshot = "^0.9.0"
libfaketime = "^2.0.0"
black = "^22.3.0"
autopep8 = "^1.6.0"
flake8 = "^4.0.1"

[tool.poetry.scripts]
bt-dualboot = "bt_dualboot.cli.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
